--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <h2>Vue快速入门</h2>
 <hr>
 <ul>
-  <ol><a href="#">2.1 Hello,Vue</a></ol>
+  <ol><a href="./example/1-声明式渲染.html">2.1 Hello,Vue</a></ol>
+  <ol><a href="./example/2.v-model.html-model.html">2.2 Vue中双向数据绑定</a></ol>
 </ul>
 </body>
 </html>
